<?xml version="1.0" encoding="utf-8"?>

<!-- 
  Talarkam
  Copyright (C) Carles Sentis 2011 <codeskraps@gmail.com>
 
  Talarkam is free software: you can
  redistribute it and/or modify it under the terms
  of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of
  the License, or (at your option) any later
  version.
   
  Talarkam is distributed in the hope that it
  will be useful, but WITHOUT ANY WARRANTY; without
  even the implied warranty of MERCHANTABILITY or
  FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  General Public License for more details.
   
  You should have received a copy of the GNU
  General Public License along with this program.
  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>

    <string name="app_name">Talarkam</string>
    <string name="iconImageDescription">Icon</string>
    <!-- Alarm Controller -->
    <string name="ac_chksnooze">Snooze every</string>
    <string name="txt_minutes">Minutes</string>
    <string name="btn_setAlarm">Set Alarm</string>
    <string name="tst_alarmSchedule">Alarm scheduled:</string>
    <string name="imageDescp">Talarkam Logo</string>
    <string name="btn_SetAlarmTone">Set alarm tone...</string>
    <string name="setVolume">Set alarm volume</string>
    <string-array name="alanguages">
        <item>None</item>
        <item>English_US</item>
        <item>English_UK</item>
        <item>French</item>
        <item>German</item>
        <item>Italian</item>
        <item>Spanish</item>
    </string-array>
    <string-array name="alanguages_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <!-- Alarm Off -->
    <string name="ao_btnStop">Stop Alarm</string>
    
    <!-- Prefs -->
    <string name="pf_catGeneral">General Settings</string>
    <string name="pf_languageTitle">Language</string>
    <string name="pf_languageDialogueTitle">Select language</string>
    <string name="pf_languageMissingTittle">Language Package Missing</string>
    <string name="pf_languageMissingSummary">Would you like to download the language package?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="pf_ringToneTitle">Alarm</string>
    <string name="pf_catFeedbackTitle">Feedback/Donation</string>
    <string name="pf_DonationTitle">Buy me a beer</string>
    <string name="pf_DonationSummary">Help me to keep my apps free and without adds</string>
    <string name="pf_FeedBackTitle">Feedback</string>
    <string name="pf_FeedBackSummary">A bit of love (send feedback)</string>
    <string name="pf_catInfo">Information</string>
    <string name="pf_infoTitle">Talarkam v1.1</string>
    <string name="pf_infoSummary">Codeskraps - 2012</string>
    
    <!-- Donation -->
    <string name="donationSummary">Talarkam is a free and open source app. You can support it with a small donation.\n\nAny donations will help to keep my apps free and regularly updated.\n\nDonation is easy: touch any of the beers below and you will be redirected to Google Play where you can make a little Donation.</string>
    <string name="donationOne">€ 1.00</string>
    <string name="donationTwo">€ 2.00</string>
    <string name="donationFive">€ 5.00</string>
    <string name="donationTen">€ 10.00</string>
</resources>