<?xml version="1.0" encoding="utf-8"?>
<!--
  Talarkam
  Copyright (C) Carles Sentis 2011 <codeskraps@gmail.com>
 
  Talarkam is free software: you can
  redistribute it and/or modify it under the terms
  of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of
  the License, or (at your option) any later
  version.
   
  Talarkam is distributed in the hope that it
  will be useful, but WITHOUT ANY WARRANTY; without
  even the implied warranty of MERCHANTABILITY or
  FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  General Public License for more details.
   
  You should have received a copy of the GNU
  General Public License along with this program.
  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <!-- <AutoCompleteTextView -->
    <!-- android:id="@+id/autotext" -->
    <!-- android:layout_width="fill_parent" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:nextFocusLeft="@id/autotext" -->
    <!-- android:nextFocusUp="@id/autotext" /> -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#222222"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/ic_launcher"
            android:contentDescription="@string/imageDescp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/app_name"
            android:textColor="#666666"
            android:textSize="25dp"
            android:typeface="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#666666"
        android:orientation="horizontal" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TimePicker
                android:id="@+id/tpAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dip" >
            </TimePicker>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/chkSnooze"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="10dip"
                    android:text="@string/ac_chksnooze" />

                <EditText
                    android:id="@+id/etxtSnoozeMin"
                    android:layout_width="50dip"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dip"
                    android:ems="10"
                    android:inputType="number"
                    android:nextFocusLeft="@id/etxtSnoozeMin"
                    android:nextFocusUp="@id/etxtSnoozeMin"
                    android:selectAllOnFocus="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/txt_minutes"
                    android:textAppearance="@android:style/TextAppearance" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSetTone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:text="@string/btn_SetAlarmTone" />

            <CheckBox
                android:id="@+id/chkVolume"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/setVolume" />

            <SeekBar
                android:id="@+id/skbVolume"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="10dip"
                android:max="100" />

            <!-- android:progressDrawable="@drawable/progress" -->
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#666666"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnSetAlarm"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="10dip"
            android:layout_weight="0.1"
            android:text="@string/btn_setAlarm" />
    </LinearLayout>

</LinearLayout>