<?xml version="1.0" encoding="utf-8"?>

<!-- 
  Talarkam
  Copyright (C) Carles Sentis 2011 <codeskraps@gmail.com>
 
  Talarkam is free software: you can
  redistribute it and/or modify it under the terms
  of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of
  the License, or (at your option) any later
  version.
   
  Talarkam is distributed in the hope that it
  will be useful, but WITHOUT ANY WARRANTY; without
  even the implied warranty of MERCHANTABILITY or
  FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  General Public License for more details.
   
  You should have received a copy of the GNU
  General Public License along with this program.
  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#222222"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/ic_launcher"
            android:contentDescription="@string/imageDescp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/app_name"
            android:textColor="#666666"
            android:textSize="25dp"
            android:typeface="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#666666"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/txtTime"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_margin="15dip"
        android:layout_weight="0.8"
        android:textSize="100sp" />

    <Button
        android:id="@+id/btnStop"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginBottom="15dip"
        android:layout_weight="0.1"
        android:text="@string/ao_btnStop" />

</LinearLayout>